<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.meeting_add.AddMeetingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_meeting_activity_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_add_meeting_header"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/add_meeting_activity_back_button"
            android:layout_width="@dimen/back_arrow"
            android:layout_height="@dimen/back_arrow"
            android:layout_marginStart="@dimen/margin_back_arrow"
            android:layout_marginTop="@dimen/margin_back_arrow"
            android:background="@drawable/ic_arrow_back"
            android:clickable="true"
            android:focusable="true"
            android:state_enabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_meeting_activity_add_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_save_button"
            android:layout_marginEnd="@dimen/margin_end_save_button"
            android:background="@drawable/bg_save_button"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="@dimen/standard_padding"
            android:paddingEnd="@dimen/standard_padding"
            android:src="@drawable/ic_add_cross_24"
            android:state_enabled="true"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="@dimen/standard_text_size"
            app:layout_constraintBottom_toBottomOf="@id/add_meeting_activity_back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/add_meeting_activity_back_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- padding at 1 to show background border when scrolling -->
    <ScrollView
        android:id="@+id/add_meeting_activity_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_top_scrollview"
        android:paddingTop="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/standard_padding"
            android:paddingEnd="@dimen/standard_padding">

            <!-- margin at 31 : see scrollview comments -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/add_meeting_activity_subject_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:background="@drawable/bg_with_bottom_border"
                android:ems="1"
                android:hint="@string/subject_edit_text_hint"
                android:inputType="textShortMessage"
                android:paddingStart="@dimen/standard_padding"
                android:paddingTop="@dimen/double_padding"
                android:paddingEnd="@dimen/standard_padding"
                android:paddingBottom="@dimen/double_padding"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/subject_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/add_meeting_activity_participants_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_with_bottom_border"
                android:ems="1"
                android:hint="@string/participants_edit_text_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/standard_padding"
                android:paddingTop="@dimen/triple_padding"
                android:paddingEnd="@dimen/standard_padding"
                android:paddingBottom="@dimen/triple_padding"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/standard_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_meeting_activity_subject_editText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/add_meeting_activity_start_datePicker_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_margin"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/standard_padding"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:textSize="@dimen/time_pickers_text_size"
                app:layout_constraintEnd_toStartOf="@id/add_meeting_start_arrow"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_meeting_activity_participants_editText" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/add_meeting_start_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:background="@drawable/ic_arrow_right_24"
                app:layout_constraintBottom_toBottomOf="@id/add_meeting_activity_start_datePicker_textView"
                app:layout_constraintEnd_toStartOf="@id/add_meeting_activity_start_timePicker_textView"
                app:layout_constraintStart_toEndOf="@id/add_meeting_activity_start_datePicker_textView"
                app:layout_constraintTop_toTopOf="@id/add_meeting_activity_start_datePicker_textView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/add_meeting_activity_start_timePicker_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/standard_text_padding"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:textSize="@dimen/time_pickers_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/add_meeting_start_arrow"
                app:layout_constraintTop_toTopOf="@id/add_meeting_activity_start_datePicker_textView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/add_meeting_activity_end_datePicker_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="@dimen/standard_margin"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/standard_text_padding"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:textSize="@dimen/time_pickers_text_size"
                app:layout_constraintEnd_toEndOf="@id/add_meeting_activity_start_datePicker_textView"
                app:layout_constraintTop_toBottomOf="@id/add_meeting_activity_start_datePicker_textView" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/add_meeting_end_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrow_right_24"
                app:layout_constraintBottom_toBottomOf="@id/add_meeting_activity_end_datePicker_textView"
                app:layout_constraintStart_toStartOf="@id/add_meeting_start_arrow"
                app:layout_constraintTop_toTopOf="@id/add_meeting_activity_end_datePicker_textView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/add_meeting_activity_end_timePicker_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/standard_text_padding"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:textSize="@dimen/time_pickers_text_size"
                app:layout_constraintStart_toStartOf="@id/add_meeting_activity_start_timePicker_textView"
                app:layout_constraintTop_toBottomOf="@id/add_meeting_activity_start_timePicker_textView" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/add_meeting_activity_room_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_margin"
                android:background="@drawable/bg_with_top_border"
                android:paddingTop="@dimen/triple_padding"
                android:paddingBottom="@dimen/triple_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_meeting_activity_end_timePicker_textView" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/add_meeting_activity_priority_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_with_top_border"
                android:paddingTop="@dimen/triple_padding"
                android:paddingBottom="@dimen/triple_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_meeting_activity_room_spinner" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/add_meeting_activity_notes_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_with_top_border"
                android:gravity="top"
                android:hint="@string/notes_edit_text_hint"
                android:inputType="textMultiLine"
                android:minLines="10"
                android:paddingStart="@dimen/standard_padding"
                android:paddingTop="@dimen/double_padding"
                android:paddingEnd="@dimen/standard_padding"
                android:paddingBottom="@dimen/double_padding"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/standard_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_meeting_activity_priority_spinner" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
