<resources>
    <!-- General -->
    <string name="app_name">Ma réu</string>
    <string name="company_domain_name">\@lamzone.com</string>

    <!-- Meeting cell layout -->
    <string name="delete_button">Delete button</string>

    <!-- Add meeting layout -->
    <string name="subject_edit_text_hint"><i>Meeting subject …</i></string>
    <string name="participants_edit_text_hint"><i>Participant 1, participant 2, …</i></string>
    <string name="notes_edit_text_hint"><i>Notes …</i></string>

    <!-- List meeting activity -->
    <string name="filter">Filter</string>
    <string name="menu_filter_by_date">Filter by date</string>
    <string name="menu_filter_by_meeting_room">Filter by meeting room</string>
    <string name="menu_no_filter">Show all meetings</string>

    <!-- Add meeting activity -->
    <string name="discard_meeting">Discard meeting ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hint_meeting_rooms">Select meeting room …</string>
    <string name="hint_meeting_priorities">Select meeting priority …</string>
    <string name="save">Save</string>
    <string name="no_room_available">No room available for this time slot …</string>
    <string name="invalid_email">is an invalid email</string>

    <!-- MeetingRoom enum values -->
    <string name="mario">Mario</string>
    <string name="luigi">Luigi</string>
    <string name="peach">Peach</string>
    <string name="toad">Toad</string>
    <string name="yoshi">Yoshi</string>
    <string name="daisy">Daisy</string>
    <string name="bowser">Bowser</string>
    <string name="harmonie">Harmonie</string>
    <string name="waluigi">Waluigi</string>
    <string name="wario">Wario</string>

    <!-- MeetingPriority enum values -->
    <string name="low">Low</string>
    <string name="average">Average</string>
    <string name="high">High</string>

</resources>
