...
        android:paddingStart="@dimen/standard_padding"
        android:paddingEnd="@dimen/standard_padding"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintBottom_toTopOf="@id/meeting_cell_participants_textView"
        app:layout_constraintEnd_toStartOf="@id/meeting_cell_delete_button"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/meeting_cell_priority_imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
...
